# wirecloud-fastapi

./: .gitignore  MANIFEST.in  README.md  conftest.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements-migration.txt  requirements-test.txt  requirements.txt  setup.py  user_permissions.txt
.github/workflows/: ci.yml
docker/: .env  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  settings.py
scripts/: run-js-coverage.mjs  run-js-tests.mjs
src/: alembic.ini  docs.py  generate_webpack_settings.py  main.py  manage.py  settings.py  settings_js.json  settings_validator.py
src/alembic/: env.py
src/wirecloud/: __init__.py  database.py  docs.py  main.py  settings.py  settings_validator.py  translation.py
src/wirecloud/catalogue/: crud.py  docs.py  models.py  plugins.py  routes.py  schemas.py  search.py  urls.py  utils.py
src/wirecloud/commons/: __init__.py  commands.py  docs.py  exceptions.py  middleware.py  plugin.ts  plugins.py  routes.py  search.py  urls.py
src/wirecloud/fiware/: __init__.py  openstack_token_manager.py  plugin.ts  plugins.py  proxy.py
src/wirecloud/keycloak/: crud.py  docs.py  plugin.ts  plugins.py  proxy.py  routes.py  utils.py
src/wirecloud/platform/: __init__.py  docs.py  plugin.ts  plugins.py  routes.py  search.py  urls.py  utils.py
src/wirecloud/proxy/: docs.py  plugins.py  processors.py  routes.py  schemas.py  urls.py  utils.py
src/wirecloud/webpack/: entries.ts  webpack-tsconfig.json  webpack.all.ts  webpack.base.ts  webpack.js.ts  webpack.sass.ts
tests/: settings.py  settings_test.py  test_packaging_build_hooks.py  test_wirecloud_database.py  test_wirecloud_docs.py  test_wirecloud_main.py  test_wirecloud_settings.py  test_wirecloud_settings_validator.py  test_wirecloud_translation.py
tests/catalogue/: test_catalogue_crud.py  test_catalogue_models.py  test_catalogue_plugins.py  test_catalogue_routes.py  test_catalogue_schemas.py  test_catalogue_search.py  test_catalogue_urls.py  test_catalogue_utils.py
tests/commons/: test_auth.py  test_auth_crud.py  test_auth_models.py  test_auth_routes.py  test_auth_schemas.py  test_auth_utils.py  test_commons_exceptions.py  test_commons_middleware.py  test_commons_plugins.py  test_commons_routes.py  test_commons_search.py  test_commons_tags.py  test_commons_urls.py  test_commons_utils_core.py  test_commons_utils_html.py  test_commons_utils_http.py  test_commons_utils_mimeparser.py  test_commons_utils_template_core.py  test_commons_utils_template_io.py  test_commons_utils_template_parser_edges.py  test_commons_utils_template_roundtrip.py  test_commons_utils_template_writer_branches.py  test_commons_utils_theme.py  test_commons_utils_wgt.py
tests/fiware/: test_fiware_openstack_token_manager.py  test_fiware_plugins.py  test_fiware_proxy.py
tests/keycloak/: test_keycloak_crud.py  test_keycloak_plugins.py  test_keycloak_proxy.py  test_keycloak_routes.py  test_keycloak_utils.py
tests/platform/: test_platform_plugins.py  test_platform_routes.py  test_platform_search.py  test_platform_urls.py  test_platform_utils.py
tests/platform/context/: test_context_crud_utils.py  test_context_models_schemas_docs.py  test_context_routes.py
tests/platform/core/: conftest.py  test_core_catalogue_manager.py  test_core_commands.py  test_core_plugins.py
tests/platform/iwidget/: test_iwidget_models.py  test_iwidget_routes.py  test_iwidget_schemas_docs.py  test_iwidget_utils.py
tests/platform/localcatalogue/: test_localcatalogue_routes.py  test_localcatalogue_schemas_docs.py  test_localcatalogue_utils.py
tests/platform/markets/: test_markets_crud_utils.py  test_markets_models_schemas_docs.py  test_markets_routes.py
tests/platform/preferences/: test_preferences_crud_utils.py  test_preferences_routes.py  test_preferences_schemas_docs.py
tests/platform/theme/: test_theme_routes.py  test_theme_schemas_docs.py
tests/platform/widget/: test_widget_models_docs_crud.py  test_widget_routes.py  test_widget_utils.py
tests/platform/wiring/: test_wiring_routes.py  test_wiring_schemas_docs.py  test_wiring_utils.py
tests/platform/workspace/: test_workspace_crud.py  test_workspace_mashup_templates.py  test_workspace_models_schemas_docs.py  test_workspace_routes.py  test_workspace_utils.py
tests/proxy/: test_proxy_plugins.py  test_proxy_processors.py  test_proxy_routes.py  test_proxy_urls.py  test_proxy_utils.py
tests_js/catalogue/: resource_details.test.cjs  resource_details_view.test.cjs  resource_painter.test.cjs  upload_window_menu.test.cjs  wirecloud_catalogue.test.cjs
tests_js/commons/lib/: urlify.test.cjs
tests_js/commons/styled_elements/: accordion.test.cjs  addon.test.cjs  alert.test.cjs  alternative.test.cjs  alternatives.test.cjs  border_layout.test.cjs  button.test.cjs  buttons_group.test.cjs  check_box.test.cjs  code_area.test.cjs  command_queue.test.cjs  container.test.cjs  default_input_interface_factory.test.cjs  dynamic_menu_items.test.cjs  editable_element.test.cjs  event.test.cjs  expander.test.cjs  file_button.test.cjs  file_field.test.cjs  form_notebook_modeltable.test.cjs  fragment.test.cjs  gui_builder.test.cjs  hidden_field.test.cjs  horizontal_layout.test.cjs  input_element.test.cjs  input_interface.test.cjs  input_interface_factory.test.cjs  input_interfaces.test.cjs  list.test.cjs  menu_item.test.cjs  multivalued_input_interface.test.cjs  numeric_field.test.cjs  object_with_events.test.cjs  off_canvas_layout.test.cjs  (+25 more)
tests_js/support/: browser-shim.cjs  legacy-runtime.cjs
(+574 files in other folders)
