# TODO

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wirecloud"
version = "2.0.0"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Discover tests anywhere in the project
testpaths = ["src", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# asyncio mode: auto → all async test functions run with pytest-asyncio automatically
asyncio_mode = "auto"
# Add src/ to sys.path so that imports work without installing the package
pythonpath = ["src"]


# Coverage is OFF by default. Enable it with:
#   pytest --cov                        → terminal report
#   pytest --cov --cov-report=html      → HTML report in htmlcov/
#   pytest --cov --cov-report=xml       → XML report (for CI)
[tool.coverage.run]
# Measure coverage only for the application source, not for tests or migrations
source = ["src"]
branch = true
omit = [
    "src/wirecloud/commons/commands.py",  # migration CLI, not part of normal app
    "src/generate_webpack_settings.py",
    "src/manage.py",
    "src/settings.py",
    "tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "src/wirecloud/themes/*"
]

[tool.coverage.report]
# Lines matching these patterns are excluded from the report
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "if __name__ == .__main__.:",
]
show_missing = true   # show line numbers that are not covered
skip_covered = false  # show all files, even fully covered ones
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

