[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wirecloud"
version = "2.0.0"
description = "Wirecloud server backend implemented with FastAPI."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "AGPL-3.0-or-later"}
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pymongo",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "aiocache",
    "aiofiles",
    "httpx",
    "elasticsearch",
    "orjson",
    "lxml",
    "markdown",
    "user-agents",
    "PyJWT",
    "aiohttp",
    "jinja2",
    "rdflib",
    "pycryptodome",
    "requests",
    "jsonpatch",
    "Babel>=2.12.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov",
    "mongomock-motor",
    "httpx",
    "asgi-lifespan",
]
migration = [
    "pymysql>=1.1.0",
    "psycopg2-binary>=2.9.0",
    "aiohttp>=3.9.0",
]

[tool.setuptools]
include-package-data = true
py-modules = ["settings", "manage", "generate_webpack_settings"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wirecloud = [
    "dist/**/*",
    "static/**/*",
    "templates/**/*",
    "locale/**/*",
    "themes/**/*",
    "webpack/**/*",
    "**/*.json",
    "**/*.yaml",
    "**/*.yml",
    "**/*.xml",
    "**/*.xsd",
    "**/*.html",
    "**/*.css",
    "**/*.scss",
    "**/*.js",
    "**/*.ts",
    "**/*.txt",
    "**/*.po",
    "**/*.mo",
    "**/*.wgt",
]

[tool.pytest.ini_options]
# Discover tests anywhere in the project
testpaths = ["src", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# asyncio mode: auto → all async test functions run with pytest-asyncio automatically
asyncio_mode = "auto"
# Add src/ to sys.path so that imports work without installing the package
pythonpath = ["src"]


# Coverage is OFF by default. Enable it with:
#   pytest --cov                        → terminal report
#   pytest --cov --cov-report=html      → HTML report in htmlcov/
#   pytest --cov --cov-report=xml       → XML report (for CI)
[tool.coverage.run]
# Measure coverage only for the application source, not for tests or migrations
source = ["src"]
branch = true
omit = [
    "src/wirecloud/commons/commands.py",  # migration CLI, not part of normal app
    "src/generate_webpack_settings.py",
    "src/manage.py",
    "src/settings.py",
    "tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "src/wirecloud/themes/*"
]

[tool.coverage.report]
# Lines matching these patterns are excluded from the report
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "if __name__ == .__main__.:",
]
show_missing = true   # show line numbers that are not covered
skip_covered = false  # show all files, even fully covered ones
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
